adding all the images, and creating the first phas

--- a/index.html
+++ b/index.html
@@ -7,6 +7,44 @@
     <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-    
+    <header class="nav-container">
+        <div class="logo-image">
+            <img src="assets/logo-full.svg" alt="logo-smashing-magazine">
+        </div>
+        <nav class="navbar">
+            <ul class="navbar-elements">
+                <li class="navbar-element navbar-element-1">Articles</li>
+                <li class="navbar-element navbar-element-2">Guides</li>
+                <li class="navbar-element navbar-element-3">Books</li>
+                <li class="navbar-element navbar-element-4">Workshops</li>
+                <li class="navbar-element navbar-element-5">Membership</li>
+                <li class="navbar-element navbar-element-6">Job Board</li>
+                <li class="navbar-element navbar-element-7">
+                    More
+                    <img src="assets/menu-cat-more-div.svg" alt="logo-menu-cat">
+                </li>
+            </ul>
+        </nav>
+        <div class="search-input">
+            <img src="assets/search-icon-orange.svg" alt="search-icon-orange">
+            <input type="text" placeholder="Search articles...">
+        </div>
+    </header>
+    <main>
+        <section>
+
+        </section>
+        <article>
+
+        </article>
+    </main>
+
+    <aside>
+
+    </aside>
+
+    <footer>
+
+    </footer>
 </body>
 </html>
