--- a/index.html
+++ b/index.html
@@ -8,22 +8,19 @@
 </head>
 <body>
     <header class="nav-container">
-        <div class="logo-image">
-            <img src="assets/logo-full.svg" alt="logo-smashing-magazine">
-        </div>
         <nav class="navbar">
             <ul class="navbar-elements">
-                <li class="navbar-element navbar-element-1">Articles</li>
-                <li class="navbar-element navbar-element-2">Guides</li>
-                <li class="navbar-element navbar-element-3">Books</li>
-                <li class="navbar-element navbar-element-4">Workshops</li>
-                <li class="navbar-element navbar-element-5">Membership</li>
-                <li class="navbar-element navbar-element-6">Job Board</li>
-                <li class="navbar-element navbar-element-7">
-                    More
-                    <img src="assets/menu-cat-more-div.svg" alt="logo-menu-cat">
-                </li>
+                <img src="assets/logo.svg" alt="logo-smashing-magazine" />
+                <li class="navbar-element navbar-element-1"><a>Articles</a> </li>
+                <li class="navbar-element navbar-element-2"><a>Guides</a></li>
+                <li class="navbar-element navbar-element-3"><a>Books</a></li>
+                <li class="navbar-element navbar-element-4"><a>Workshops</a></li>
+                <li class="navbar-element navbar-element-5"><a>Membership</a></li>
+                <li class="navbar-element navbar-element-6"><a>Job Board</a></li>
+                <li class="navbar-element navbar-element-6"><a>
+                    <img src="assets/menu-cat-more-div.svg" alt="logo-menu-cat" class="catmenu">More</a></li>
             </ul>
+            
         </nav>
         <div class="search-input">
             <img src="assets/search-icon-orange.svg" alt="search-icon-orange">
