Changes to the navbar

--- a/index.html
+++ b/index.html
@@ -8,22 +8,27 @@
 </head>
 <body>
     <header class="nav-container">
+        <a href="#">
+            <img src="assets/logo.svg" alt="logo-smashing-magazine" class="logo-app"/>
+        </a>
         <nav class="navbar">
-            <ul class="navbar-elements">
-                <img src="assets/logo.svg" alt="logo-smashing-magazine" />
-                <li class="navbar-element navbar-element-1"><a>Articles</a> </li>
-                <li class="navbar-element navbar-element-2"><a>Guides</a></li>
-                <li class="navbar-element navbar-element-3"><a>Books</a></li>
-                <li class="navbar-element navbar-element-4"><a>Workshops</a></li>
-                <li class="navbar-element navbar-element-5"><a>Membership</a></li>
-                <li class="navbar-element navbar-element-6"><a>Job Board</a></li>
-                <li class="navbar-element navbar-element-6"><a>
-                    <img src="assets/menu-cat-more-div.svg" alt="logo-menu-cat" class="catmenu">More</a></li>
+            <ul class="navbar-elements-ul navbar-elements">
+                <li class="navbar-element navbar-element-1"><a href="#" class="navbar-element-a">Articles</a> </li>
+                <li class="navbar-element navbar-element-2"><a href="#" class="navbar-element-a">Guides</a></li>
+                <li class="navbar-element navbar-element-3"><a href="#" class="navbar-element-a">Books</a></li>
+                <li class="navbar-element navbar-element-4"><a href="#" class="navbar-element-a">Workshops</a></li>
+                <li class="navbar-element navbar-element-5"><a href="#" class="navbar-element-a">Membership</a></li>
+                <li class="navbar-element navbar-element-6"><a href="#" class="navbar-element-a">Job Board</a></li>
+                <li class="navbar-element navbar-element-7">
+                    <a href="#" class="text-more-catmenu">More</a>
+                    <a href="#">
+                        <img src="assets/menu-cat-more-div.svg" alt="logo-menu-cat" class="catmenu">
+                    </a>
+                </li>
             </ul>
-            
         </nav>
         <div class="search-input">
-            <img src="assets/search-icon-orange.svg" alt="search-icon-orange">
+            <img src="assets/Vector_search_icon-resize.png" alt="search-icon-orange" class="search-icon-size">
             <input type="text" placeholder="Search articles...">
         </div>
     </header>
