Finish the header and the navbar

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
         </a>
         <nav class="navbar">
             <ul class="navbar-elements-ul navbar-elements">
-                <li class="navbar-element navbar-element-1"><a href="#" class="navbar-element-a">Articles</a> </li>
-                <li class="navbar-element navbar-element-2"><a href="#" class="navbar-element-a">Guides</a></li>
-                <li class="navbar-element navbar-element-3"><a href="#" class="navbar-element-a">Books</a></li>
-                <li class="navbar-element navbar-element-4"><a href="#" class="navbar-element-a">Workshops</a></li>
-                <li class="navbar-element navbar-element-5"><a href="#" class="navbar-element-a">Membership</a></li>
-                <li class="navbar-element navbar-element-6"><a href="#" class="navbar-element-a">Job Board</a></li>
+                <li class="navbar-element navbar-element-1"><a href="#" class="navbar-element-a nunito-font-family">Articles</a> </li>
+                <li class="navbar-element navbar-element-2"><a href="#" class="navbar-element-a nunito-font-family">Guides</a></li>
+                <li class="navbar-element navbar-element-3"><a href="#" class="navbar-element-a nunito-font-family">Books</a></li>
+                <li class="navbar-element navbar-element-4"><a href="#" class="navbar-element-a nunito-font-family">Workshops</a></li>
+                <li class="navbar-element navbar-element-5"><a href="#" class="navbar-element-a nunito-font-family">Membership</a></li>
+                <li class="navbar-element navbar-element-6"><a href="#" class="navbar-element-a nunito-font-family">Job Board</a></li>
                 <li class="navbar-element navbar-element-7">
-                    <a href="#" class="text-more-catmenu">More</a>
+                    <a href="#" class="text-more-catmenu nunito-font-family">More</a>
                     <a href="#">
                         <img src="assets/menu-cat-more-div.svg" alt="logo-menu-cat" class="catmenu">
                     </a>
@@ -28,8 +28,8 @@
             </ul>
         </nav>
         <div class="search-input">
-            <img src="assets/Vector_search_icon-resize.png" alt="search-icon-orange" class="search-icon-size">
-            <input type="text" placeholder="Search articles...">
+            <img src="assets/Vector_search_icon-resize.png" alt="search-icon-orange" class="search-icon-margin">
+            <input type="text" placeholder="Search articles..." class="nunito-font-family border-none">
         </div>
     </header>
     <main>
