Finish firts Section

--- a/index.html
+++ b/index.html
@@ -33,12 +33,89 @@
         </div>
     </header>
     <main>
-        <section>
+        <div class="firts-section">
+            <section class="firts-section-without-aside">
+                <article class="firts-article-firts-section">
+                    <div class="title-firts-article-firts-section">
+                        <div class="picture-title-firts-article-firts-section">
+                            <img src="assets/default.jpg" alt="example-picture" class="width-10rem">
+                        </div>
+                        <div class="text-title-firts-article-firts-section">
+                            <div class="margin-height-1rem">
+                                <a href="#" class="text-color-black nunito-font-family">Suzanne Scacca</a> <span class="text-color-999 kufam-font-family">Wrote</span>
+                            </div>
+                            <div class="nunito-font-family margin-height-1rem font-size-3rem">
+                                How To Make More Money Selling Shopify Apps In 2021
+                            </div>
+                            <div class="margin-height-1rem">
+                                <span class="playfair-font-family">jan 7, 2021</span> <span class="text-color-999 kufam-font-family">in</span> <a href="#" class="text-color-black nunito-font-family text-color-666">Business</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="content-firts-article-firts-section playfair-font-family paragraph-format">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus odio delectus quaerat numquam nesciunt aperiam distinctio vitae consectetur molestiae eligendi!
+                    </div>
+                    <div>
+                        <a href="#" class="text-color-black nunito-font-family">
+                            Continue reading ►
+                        </a>
+                    </div>
+                </article>
+                <article class="margin-top-2rem display-flex-dad">
+                    <div class="flex-grow-son-1">
+                        <img src="assets/default.jpg" alt="example-picture" class="width-7rem">
+                    </div>
+                    <div class="flex-grow-son-5">
+                        <div>
+                            <a href="#" class="text-color-black nunito-font-family">Noam Rosenthal</a> <span class="playfair-font-family">jan 5, 2021</span> <span class="text-color-999 kufam-font-family">in</span> <a href="#" class="text-color-black nunito-font-family text-color-666">Design</a>
+                        </div>
+                        <div class="nunito-font-family margin-height-1rem font-size-2rem">
+                            Should The Web Expose Hardware Capabilities?
+                        </div>
+                    </div>
+                </article>
+                <article class="margin-top-2rem display-flex-dad">
+                    <div class="flex-grow-son-1">
+                        <img src="assets/default.jpg" alt="example-picture" class="width-7rem">
+                    </div>
+                    <div class="flex-grow-son-5">
+                        <div>
+                            <a href="#" class="text-color-black nunito-font-family">Frederick O’Brien</a> <span class="playfair-font-family">/ jan 4, 2021</span> <span class="text-color-999 kufam-font-family">in</span> <a href="#" class="text-color-black nunito-font-family text-color-666">Opinion Column</a>
+                        </div>
+                        <div class="nunito-font-family margin-height-1rem font-size-2rem">
+                            Towards An Ad-Free Web: Diversifying The Online Economy
+                        </div>
+                    </div>
+                </article>
+            </section>
+            <aside class="firts-aside">
+                <div>
+                    <img src="assets/default.jpg" alt="example-picture">
+                </div>
+                <div class="line-height-1rem">
+                    Smashing Email Newsletter
+                </div>
+                <div class="line-height-1rem">
+                    Useful front-end & UX tips, delivered once a week.
+                </div>
+                <div class="line-height-1rem">
+                    With tools to help you get your work done better. Subscribe and get Vitaly’s Smart Interface Design Checklists PDF — in your inbox. 🎁
+                </div>
+                <div class="display-flex-dad">
+                    <input type="text">
+                    <button>Meow!</button>
+                </div>
+                <div class="line-height-1rem">
+                    On front-end & UX. Trusted by 190.000 folks.
+                </div>
+            </aside>
+        </div>
+        <div class="latest-articles paragraph-format">
+            SEE ALL LATEST ARTICLES ►
+        </div>
+        <div class="second-section">
 
-        </section>
-        <article>
-
-        </article>
+        </div>
     </main>
 
     <aside>
