--- a/index.html
+++ b/index.html
@@ -114,7 +114,29 @@
             SEE ALL LATEST ARTICLES ►
         </div>
         <div class="second-section">
-
+            <div class="second-section-row">
+                <article>
+                    <div>4 Days Ago</div>
+                    <div>Towards An Ad-Free Web: Diversifying The Online Economy</div>
+                    <div class="text-color-black nunito-font-family">by Frederick O’Brien</div>
+                    <div>The founding principles of the World Wide Web have been warped by years of over-reliance on advertising. Fixing that imbalance and moving toward a more ethical, open web means relaying the foundations, with sites showing other ways are possible.</div>
+                    <div>→</div>
+                </article >
+                <article >
+                    <div>8 days ago</div>
+                    <div>Sparks Of Inspiration To Welcome The New Year (January 2021 Wallpapers Edition)</div>
+                    <div>by Cosima Mielke</div>
+                    <div>What better way could there be to start the new year than with some fresh inspiration? Our collection of wallpapers for January 2021 is bound to put a smile on your face — and maybe spark new ideas, too.</div>
+                    <div>→</div>
+                </article>
+                <article>
+                    <div>10 days ago</div>
+                    <div>Smashing Podcast Episode 32: Review Of The Year 2020</div>
+                    <div>by Drew McLellan</div>
+                    <div>In this episode, we’re taking a look back at 2020. Who did we speak to in our episodes this year, and what did we learn? Let’s listen back to some clips to find out.</div>
+                    <div>→</div>
+                </article>
+            </div>
         </div>
     </main>
 
