Build third fourth and fifth section

--- a/index.html
+++ b/index.html
@@ -138,6 +138,159 @@
                 </article>
             </div>
         </div>
+        <div class="third-section">
+            <div class="firts-part-third-section">
+                <div class="margin-bottom-2rem">
+                    Our friends and supporters ◄
+                </div>
+                <div class="editor-x">
+                    <div class="margin-top-bottom-5rem">
+                        Editor X
+                    </div>
+                    <div class="margin-bottom-2rem">
+                        Explore the major web design trends of 2021 in Editor X's interactive report.
+                    </div>
+                    <div class="margin-bottom-2rem">
+                        <button class="cursor-pointer">DISCOVER MORE</button>
+                    </div>
+                </div>
+            </div>
+            <div class="second-part-third-section">
+                <img src="assets/default.jpg" alt="example-picture" class="margin-bottom-2rem">
+                <div class="margin-bottom-2rem">
+                    Join 1903 Smashing Members
+                </div>
+                <div class="margin-bottom-2rem">
+                    A friendly community  for people who design and build the web. With books, workshops, goodies and early-birds — for just 1 coffee a month.
+                </div>
+                <div class="margin-bottom-2rem">
+                    <button class="cursor-pointer">Join the community ►</button>
+                </div>
+                <div class="margin-bottom-2rem">
+                    Already have an account? Sign in!
+                </div>
+            </div>
+        </div>
+        <div class="fourth-section">
+            <div class="articles-fourth-section">
+                <div class="articles-fourth-section-grow-1 margin-2rem">
+                    <div class="margin-bottom-2rem">
+                        11 days Ago
+                    </div>
+                    <div class="margin-bottom-2rem">
+                        Creativity In A World Of Technology: Does It Exist?
+                    </div>
+                    <div class="margin-bottom-2rem">
+                        by Maggie Mackenzie
+                    </div>
+                    <div class="margin-bottom-2rem">
+                        Technology has done our world wonders: from advancements in medicine, travel, communication, and not to mention our own day-to-day lives. There’s no doubt that it has “transformed human experience” by impacting the way our society functions, as well as how we interact with one another and ourselves. But is this actually a good thing?
+                    </div>
+                </div>
+                <div class="articles-fourth-section-grow-1 margin-2rem">
+                    <div class="margin-bottom-2rem">
+                        11 days Ago
+                    </div>
+                    <div class="margin-bottom-2rem">
+                        Creativity In A World Of Technology: Does It Exist?
+                    </div>
+                    <div class="margin-bottom-2rem">
+                        by Maggie Mackenzie
+                    </div>
+                    <div class="margin-bottom-2rem">
+                        Technology has done our world wonders: from advancements in medicine, travel, communication, and not to mention our own day-to-day lives. There’s no doubt that it has “transformed human experience” by impacting the way our society functions, as well as how we interact with one another and ourselves. But is this actually a good thing?
+                    </div>
+                </div>
+                <div class="articles-fourth-section-grow-1 margin-2rem">
+                    <div class="margin-bottom-2rem">
+                        11 days Ago
+                    </div>
+                    <div class="margin-bottom-2rem">
+                        Creativity In A World Of Technology: Does It Exist?
+                    </div>
+                    <div class="margin-bottom-2rem">
+                        by Maggie Mackenzie
+                    </div>
+                    <div class="margin-bottom-2rem">
+                        Technology has done our world wonders: from advancements in medicine, travel, communication, and not to mention our own day-to-day lives. There’s no doubt that it has “transformed human experience” by impacting the way our society functions, as well as how we interact with one another and ourselves. But is this actually a good thing?
+                    </div>
+                </div>
+            </div>
+            <div class="arrows">
+                <div class="articles-fourth-section-grow-1">►</div>
+                <div class="articles-fourth-section-grow-1">►</div>
+                <div class="articles-fourth-section-grow-1">►</div>
+            </div>
+            <div class="articles-fourth-section">
+                <div class="articles-fourth-section-grow-1 margin-2rem">
+                    <div class="margin-bottom-2rem">
+                        11 days Ago
+                    </div>
+                    <div class="margin-bottom-2rem">
+                        Creativity In A World Of Technology: Does It Exist?
+                    </div>
+                    <div class="margin-bottom-2rem">
+                        by Maggie Mackenzie
+                    </div>
+                    <div class="margin-bottom-2rem">
+                        Technology has done our world wonders: from advancements in medicine, travel, communication, and not to mention our own day-to-day lives. There’s no doubt that it has “transformed human experience” by impacting the way our society functions, as well as how we interact with one another and ourselves. But is this actually a good thing?
+                    </div>
+                </div>
+                <div class="articles-fourth-section-grow-1 margin-2rem">
+                    <div class="margin-bottom-2rem">
+                        11 days Ago
+                    </div>
+                    <div class="margin-bottom-2rem">
+                        Creativity In A World Of Technology: Does It Exist?
+                    </div>
+                    <div class="margin-bottom-2rem">
+                        by Maggie Mackenzie
+                    </div>
+                    <div class="margin-bottom-2rem">
+                        Technology has done our world wonders: from advancements in medicine, travel, communication, and not to mention our own day-to-day lives. There’s no doubt that it has “transformed human experience” by impacting the way our society functions, as well as how we interact with one another and ourselves. But is this actually a good thing?
+                    </div>
+                </div>
+                <div class="articles-fourth-section-grow-1 margin-2rem">
+                    <div class="margin-bottom-2rem">
+                        11 days Ago
+                    </div>
+                    <div class="margin-bottom-2rem">
+                        Creativity In A World Of Technology: Does It Exist?
+                    </div>
+                    <div class="margin-bottom-2rem">
+                        by Maggie Mackenzie
+                    </div>
+                    <div class="margin-bottom-2rem">
+                        Technology has done our world wonders: from advancements in medicine, travel, communication, and not to mention our own day-to-day lives. There’s no doubt that it has “transformed human experience” by impacting the way our society functions, as well as how we interact with one another and ourselves. But is this actually a good thing?
+                    </div>
+                </div>
+            </div>
+            <div class="arrows">
+                <div class="articles-fourth-section-grow-1">►</div>
+                <div class="articles-fourth-section-grow-1">►</div>
+                <div class="articles-fourth-section-grow-1">►</div>
+            </div>
+            <div class="latest-articles paragraph-format">
+                SEE ALL LATEST ARTICLES ►
+            </div>
+        </div>
+        <div class="fifth-section">
+            <div class="margin-bottom-2rem margin-top-2rem text-color-white">
+                June 2020 • Shipping Now
+            </div>
+            <div class="margin-bottom-2rem text-color-white">
+                Meet “Click!”: Encourage Clicks
+                <br>
+                Without Shady Tricks
+            </div>
+            <div class="margin-bottom-2rem text-color-white">
+                Our new book on how to <strong>boost business KPIs</strong> , build trust and address doubts effectively — without alienating people along the way. By Paul Boag.
+            </div>
+            <button class="cursor-pointer margin-bottom-2rem">
+                Jump to table of contents ►
+            </button>
+            <img src="assets/default.jpg" alt="example-picture" class="margin-bottom-2rem">
+        </div>
     </main>
 
     <aside>
