Finish sixth section

--- a/index.html
+++ b/index.html
@@ -291,11 +291,79 @@
             </button>
             <img src="assets/default.jpg" alt="example-picture" class="margin-bottom-2rem">
         </div>
+        <div class="sixth-section">
+            <div class="firts-part-sixth-section">
+                <div class="flex-grow-son-1 margin-2rem second-important-card-sixth-section">
+                    <div class="margin-top-2rem margin-bottom-2rem">
+                        A Smashing Guide to
+                    </div>
+                    <div class="margin-bottom-2rem">
+                        JavaScript & Frameworks
+                    </div>
+                    <div class="margin-bottom-2rem">
+                        React, Vue, or perhaps the lightweight Alpine.js? Whether you are
+                        an experienced JavaScript developer working with one of these
+                        frameworks, or just starting to learn, our authors have created
+                        some tutorials for you.
+                    </div>
+                    <button class="margin-bottom-2rem">Explore JavaScript & Frameworks</button>
+                </div>
+                <div class="flex-grow-son-1 margin-2rem second-important-card-sixth-section">
+                    <div class="margin-top-2rem margin-bottom-2rem">
+                        A Smashing Guide to
+                    </div>
+                    <div class="margin-bottom-2rem">
+                        JavaScript & Frameworks
+                    </div>
+                    <div class="margin-bottom-2rem">
+                        React, Vue, or perhaps the lightweight Alpine.js? Whether you are
+                        an experienced JavaScript developer working with one of these
+                        frameworks, or just starting to learn, our authors have created
+                        some tutorials for you.
+                    </div>
+                    <button class="margin-bottom-2rem">Explore JavaScript & Frameworks</button>
+                </div>
+            </div>
+            <div class="second-part-sixth-section">
+                <div class="flex-grow-son-1 margin-2rem second-important-card-sixth-section">
+                    <div class="margin-top-2rem margin-bottom-2rem">
+                        A Smashing Guide to
+                    </div>
+                    <div class="margin-bottom-2rem">
+                        JavaScript & Frameworks
+                    </div>
+                    <div class="margin-bottom-2rem">
+                        React, Vue, or perhaps the lightweight Alpine.js? Whether you are
+                        an experienced JavaScript developer working with one of these
+                        frameworks, or just starting to learn, our authors have created
+                        some tutorials for you.
+                    </div>
+                    <button class="margin-bottom-2rem">Explore JavaScript & Frameworks</button>
+                </div>
+                <div class="flex-grow-son-1 margin-2rem firts-important-card-sixth-section">
+                    <img src="assets/default.jpg" alt="example-picture" class="margin-top-2rem">
+                    <div class="margin-top-2rem margin-bottom-2rem">
+                        Email Newsletter
+                    </div>
+                    <div class="margin-bottom-2rem">
+                        Every Tuesday, we send an email newsletter with useful techniques on front-end & UX. Subscribe and get a  <strong>freebie : Smart Interface Design Checklists PDF</strong> — right in your inbox. 🔮
+                    </div>
+                    <div class="margin-bottom-2rem">
+                        <input type="text" placeholder="Your email">
+                        <button>Meow!</button>
+                    </div>
+                    <div class="margin-bottom-2rem text-align-center">
+                        Front-end, UX and design. 1× a week.
+                        <br>
+                        You can always unsubscribe with just 1 click.
+                    </div>
+                </div>
+            </div>
+            <div class="latest-articles paragraph-format">
+                SEE ALL GUIDES ►
+            </div>
+        </div>
     </main>
-
-    <aside>
-
-    </aside>
 
     <footer>
 
