finish seventh section

--- a/index.html
+++ b/index.html
@@ -363,6 +363,21 @@
                 SEE ALL GUIDES ►
             </div>
         </div>
+        <div class="seventh-section margin-2rem">
+            <div class="flex-grow-7">
+                <div class="margin-top-2rem margin-bottom-2rem">
+                    Featured Smashing Book
+                </div>
+                <div class="margin-bottom-2rem">
+                    Design Systems
+                </div>
+                <div class="margin-bottom-2rem">
+                    Meet <strong>Design Systems</strong>, a recent Smashing book in which Alla Kholmatova explores how to set up an <strong>effective design system</strong> to create great digital products. With common traps, gotchas and lessons learned.
+                </div>
+                <button class="margin-bottom-2rem">Jump to table of contents ►</button>
+            </div>
+            <img src="assets/default.jpg" alt="example-picture" class="flex-grow-son-1 margin-2rem">
+        </div>
     </main>
 
     <footer>
