eighth section finish

--- a/index.html
+++ b/index.html
@@ -378,6 +378,112 @@
             </div>
             <img src="assets/default.jpg" alt="example-picture" class="flex-grow-son-1 margin-2rem">
         </div>
+        <div class="eighth-section">
+            <div class="first-card-eighth-section">
+                <img src="assets/default.jpg" alt="example-picture" class="flex-grow-son-1">
+                <div class="flex-grow-7 margin-2rem">
+                    <div class="margin-bottom-2rem">
+                        Person Of The Week
+                    </div>
+                    <div class="">
+                        Stephanie Troeth (<a href="#">@sniffles</a>) is a strategist, researcher, writer, and speaker who helps people create evidence-based design that is user-centered and benefits the business bottom line. Most recently, she was Head of Research at Clearleft. Before that, she led design research at the Telegraph and spearheaded European customer research with MailChimp as a research consultant. Steph also took leading roles in grassroots initiatives for a fairer and better web through work on best practices, standards, and accessibility. Thank you for everything you do for the community, dear Steph!
+                    </div>
+                </div>
+            </div>
+            <div class="seconds-card-eighth-section">
+                <div class="sons-seconds-card-eighth-section">
+                    <img src="assets/default.jpg" alt="example-picture" class="flex-grow-son-1">
+                    <div class="flex-grow-7 margin-2rem">
+                        <div class="margin-bottom-2rem">
+                            Ahmad Shadeed wrote
+                        </div>
+                        <div class="margin-bottom-2rem">
+                            Building Real-Life Components
+                        </div>
+                        <div class="margin-bottom-2rem">
+                            January 8, 2021 — Ahmad Shadeed shares the art of building responsive components that work not only in theory but in real-life projects with real content.
+                        </div>
+                    </div>
+                </div>
+                <div class="sons-seconds-card-eighth-section">
+                    <img src="assets/default.jpg" alt="example-picture" class="flex-grow-son-1">
+                    <div class="flex-grow-7 margin-2rem">
+                        <div class="margin-bottom-2rem">
+                            Ahmad Shadeed wrote
+                        </div>
+                        <div class="margin-bottom-2rem">
+                            Building Real-Life Components
+                        </div>
+                        <div class="margin-bottom-2rem">
+                            January 8, 2021 — Ahmad Shadeed shares the art of building responsive components that work not only in theory but in real-life projects with real content.
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="seconds-card-eighth-section">
+                <div class="sons-seconds-card-eighth-section">
+                    <img src="assets/default.jpg" alt="example-picture" class="flex-grow-son-1">
+                    <div class="flex-grow-7 margin-2rem">
+                        <div class="margin-bottom-2rem">
+                            Ahmad Shadeed wrote
+                        </div>
+                        <div class="margin-bottom-2rem">
+                            Building Real-Life Components
+                        </div>
+                        <div class="margin-bottom-2rem">
+                            January 8, 2021 — Ahmad Shadeed shares the art of building responsive components that work not only in theory but in real-life projects with real content.
+                        </div>
+                    </div>
+                </div>
+                <div class="sons-seconds-card-eighth-section">
+                    <img src="assets/default.jpg" alt="example-picture" class="flex-grow-son-1">
+                    <div class="flex-grow-7 margin-2rem">
+                        <div class="margin-bottom-2rem">
+                            Ahmad Shadeed wrote
+                        </div>
+                        <div class="margin-bottom-2rem">
+                            Building Real-Life Components
+                        </div>
+                        <div class="margin-bottom-2rem">
+                            January 8, 2021 — Ahmad Shadeed shares the art of building responsive components that work not only in theory but in real-life projects with real content.
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="seconds-card-eighth-section">
+                <div class="sons-seconds-card-eighth-section">
+                    <img src="assets/default.jpg" alt="example-picture" class="flex-grow-son-1">
+                    <div class="flex-grow-7 margin-2rem">
+                        <div class="margin-bottom-2rem">
+                            Ahmad Shadeed wrote
+                        </div>
+                        <div class="margin-bottom-2rem">
+                            Building Real-Life Components
+                        </div>
+                        <div class="margin-bottom-2rem">
+                            January 8, 2021 — Ahmad Shadeed shares the art of building responsive components that work not only in theory but in real-life projects with real content.
+                        </div>
+                    </div>
+                </div>
+                <div class="sons-seconds-card-eighth-section">
+                    <img src="assets/default.jpg" alt="example-picture" class="flex-grow-son-1">
+                    <div class="flex-grow-7 margin-2rem">
+                        <div class="margin-bottom-2rem">
+                            Ahmad Shadeed wrote
+                        </div>
+                        <div class="margin-bottom-2rem">
+                            Building Real-Life Components
+                        </div>
+                        <div class="margin-bottom-2rem">
+                            January 8, 2021 — Ahmad Shadeed shares the art of building responsive components that work not only in theory but in real-life projects with real content.
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="latest-articles paragraph-format">
+                MORE LINKS ON TWITTER ►
+            </div>
+        </div>
     </main>
 
     <footer>
