--- a/index.html
+++ b/index.html
@@ -487,7 +487,77 @@
     </main>
 
     <footer>
-
+        <div class="footer-title">BROWSE ALL SMASHING MAGAZINE TOPICS</div>
+        <div>
+        <ul>
+            <li><a href="#">Accessibility</a></li>
+            <li><a href="#">Android</a></li>
+            <li><a href="#">Animation</a></li>
+            <li><a href="#">Apps</a></li>
+            <li><a href="#">CSS</a></li>
+            <li><a href="#">Design</a></li>
+            <li><a href="#">Design Patterns</a></li>
+            <li><a href="#">Design Systems</a></li>
+            <li><a href="#">E-Commerce</a></li>
+        </ul>
+    </div>
+    <div>
+        <ul>
+            <li><a href="#">Freebies</a></li>
+            <li><a href="#">Graphics</a></li>
+            <li><a href="#">HTML</a></li>
+            <li><a href="#">Illustrator</a></li>
+            <li><a href="#">Inspiration</a></li>
+            <li><a href="#">iOS</a></li>
+            <li><a href="#">JavaScript</a></li>
+            <li><a href="#">Mobile</a></li>
+            <li><a href="#">Pattern Libraries</a></li>
+        </ul>
+    </div>
+    <div>
+        <ul>
+            <li><a href="#">Performance</a></li>
+            <li><a href="#">Photoshop</a></li>
+            <li><a href="#">Plugins</a></li>
+            <li><a href="#">React</a></li>
+            <li><a href="#">Responsive Web Design</a></li>
+            <li><a href="#">Service Workers</a></li>
+            <li><a href="#">Sketch</a></li>
+            <li><a href="#">Typography</a></li>
+        </ul>
+    </div>
+    <div>
+        <ul>
+            <li><a href="#">UI</a></li>
+            <li><a href="#">Usability</a></li>
+            <li><a href="#">User Experience</a></li>
+            <li><a href="#">Wallpapers</a></li>
+            <li><a href="#">Web Design</a></li>
+            <li><a href="#">WordPress</a></li>
+            <li><a href="#">Workflow</a></li>
+        </ul>
+    </div>
+    <p>
+         a commitment to quality content for the design community.<br />
+         Founded by Vitaly Friedman and Sven Lennartz. 2006–2021.<br />
+         Smashing is proudly running on Netlify.<br />
+         Fonts by Latinotype.
+    </p>
+    <div>
+        <ul class="small-ul">
+            <li><a class="small-li-a" href="#"> Write for us</a></li>
+            <li><a class="small-li-a" href="#">Contact us</a></li>
+            <li><a class="small-li-a" href="#">About us (Impressum)</a></li>
+            <li><a class="small-li-a" href="#">Privacy policy</a></li>
+        </ul>
+    </div>
+    <div>
+        <ul class="small-ul">
+            <li><a class="small-li-a" href="#">Membership login</a></li>
+            <li><a class="small-li-a" href="#">Delivery times</a></li>
+            <li><a class="small-li-a" href="#">Advertise</a></li>
+        </ul>
+    </div>
     </footer>
 </body>
 </html>
