--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
     <main>
         <div class="firts-section">
             <section class="firts-section-without-aside">
+                <h6 class="h6-font-size">.</h6>
                 <article class="firts-article-firts-section">
+                    <h6 class="h6-font-size">.</h6>
                     <div class="title-firts-article-firts-section">
                         <div class="picture-title-firts-article-firts-section">
                             <img src="assets/default.jpg" alt="example-picture" class="width-10rem">
@@ -62,6 +64,7 @@
                     </div>
                 </article>
                 <article class="margin-top-2rem display-flex-dad">
+                    <h6 class="h6-font-size">.</h6>
                     <div class="flex-grow-son-1">
                         <img src="assets/default.jpg" alt="example-picture" class="width-7rem">
                     </div>
@@ -75,6 +78,7 @@
                     </div>
                 </article>
                 <article class="margin-top-2rem display-flex-dad">
+                    <h6 class="h6-font-size">.</h6>
                     <div class="flex-grow-son-1">
                         <img src="assets/default.jpg" alt="example-picture" class="width-7rem">
                     </div>
@@ -103,7 +107,7 @@
                 </div>
                 <div class="display-flex-dad">
                     <input type="text">
-                    <button>Meow!</button>
+                    <button type="button">Meow!</button>
                 </div>
                 <div class="line-height-1rem">
                     On front-end & UX. Trusted by 190.000 folks.
@@ -116,13 +120,15 @@
         <div class="second-section">
             <div class="second-section-row">
                 <article>
+                    <h6 class="h6-font-size">.</h6>
                     <div>4 Days Ago</div>
                     <div>Towards An Ad-Free Web: Diversifying The Online Economy</div>
                     <div class="text-color-black nunito-font-family">by Frederick O’Brien</div>
                     <div>The founding principles of the World Wide Web have been warped by years of over-reliance on advertising. Fixing that imbalance and moving toward a more ethical, open web means relaying the foundations, with sites showing other ways are possible.</div>
                     <div>→</div>
                 </article >
-                <article >
+                <article>
+                    <h6 class="h6-font-size">.</h6>
                     <div>8 days ago</div>
                     <div>Sparks Of Inspiration To Welcome The New Year (January 2021 Wallpapers Edition)</div>
                     <div>by Cosima Mielke</div>
@@ -130,6 +136,7 @@
                     <div>→</div>
                 </article>
                 <article>
+                    <h6 class="h6-font-size">.</h6>
                     <div>10 days ago</div>
                     <div>Smashing Podcast Episode 32: Review Of The Year 2020</div>
                     <div>by Drew McLellan</div>
@@ -151,7 +158,7 @@
                         Explore the major web design trends of 2021 in Editor X's interactive report.
                     </div>
                     <div class="margin-bottom-2rem">
-                        <button class="cursor-pointer">DISCOVER MORE</button>
+                        <button class="cursor-pointer" type="button">DISCOVER MORE</button>
                     </div>
                 </div>
             </div>
@@ -164,7 +171,7 @@
                     A friendly community  for people who design and build the web. With books, workshops, goodies and early-birds — for just 1 coffee a month.
                 </div>
                 <div class="margin-bottom-2rem">
-                    <button class="cursor-pointer">Join the community ►</button>
+                    <button class="cursor-pointer" type="button">Join the community ►</button>
                 </div>
                 <div class="margin-bottom-2rem">
                     Already have an account? Sign in!
@@ -286,7 +293,7 @@
             <div class="margin-bottom-2rem text-color-white">
                 Our new book on how to <strong>boost business KPIs</strong> , build trust and address doubts effectively — without alienating people along the way. By Paul Boag.
             </div>
-            <button class="cursor-pointer margin-bottom-2rem">
+            <button class="cursor-pointer margin-bottom-2rem" type="button">
                 Jump to table of contents ►
             </button>
             <img src="assets/default.jpg" alt="example-picture" class="margin-bottom-2rem">
@@ -306,7 +313,7 @@
                         frameworks, or just starting to learn, our authors have created
                         some tutorials for you.
                     </div>
-                    <button class="margin-bottom-2rem">Explore JavaScript & Frameworks</button>
+                    <button class="margin-bottom-2rem" type="button">Explore JavaScript & Frameworks</button>
                 </div>
                 <div class="flex-grow-son-1 margin-2rem second-important-card-sixth-section">
                     <div class="margin-top-2rem margin-bottom-2rem">
@@ -321,7 +328,7 @@
                         frameworks, or just starting to learn, our authors have created
                         some tutorials for you.
                     </div>
-                    <button class="margin-bottom-2rem">Explore JavaScript & Frameworks</button>
+                    <button class="margin-bottom-2rem" type="button">Explore JavaScript & Frameworks</button>
                 </div>
             </div>
             <div class="second-part-sixth-section">
@@ -338,7 +345,7 @@
                         frameworks, or just starting to learn, our authors have created
                         some tutorials for you.
                     </div>
-                    <button class="margin-bottom-2rem">Explore JavaScript & Frameworks</button>
+                    <button class="margin-bottom-2rem" type="button">Explore JavaScript & Frameworks</button>
                 </div>
                 <div class="flex-grow-son-1 margin-2rem firts-important-card-sixth-section">
                     <img src="assets/default.jpg" alt="example-picture" class="margin-top-2rem">
@@ -350,7 +357,7 @@
                     </div>
                     <div class="margin-bottom-2rem">
                         <input type="text" placeholder="Your email">
-                        <button>Meow!</button>
+                        <button type="button">Meow!</button>
                     </div>
                     <div class="margin-bottom-2rem text-align-center">
                         Front-end, UX and design. 1× a week.
@@ -374,7 +381,7 @@
                 <div class="margin-bottom-2rem">
                     Meet <strong>Design Systems</strong>, a recent Smashing book in which Alla Kholmatova explores how to set up an <strong>effective design system</strong> to create great digital products. With common traps, gotchas and lessons learned.
                 </div>
-                <button class="margin-bottom-2rem">Jump to table of contents ►</button>
+                <button class="margin-bottom-2rem" type="button">Jump to table of contents ►</button>
             </div>
             <img src="assets/default.jpg" alt="example-picture" class="flex-grow-son-1 margin-2rem">
         </div>
